--- a/server/static/tree/style.css
+++ b/server/static/tree/style.css
@@ -6,21 +6,19 @@ body {
   font-family: "Helvetica Neue", Helvetica;
 }
 
-#chart, #header, #filters, #footer {
+#chart,
+#header,
+#filters,
+#footer {
   position: absolute;
   top: 0;
 }
 
-#header, #footer {
+#header,
+#footer {
   z-index: 1;
   display: block;
   font-size: 36px;
-  font-weight: 300;
-  text-shadow: 0 1px 0 #fff;
-}
-
-table caption {
-  font-size: 12px;
   font-weight: 300;
   text-shadow: 0 1px 0 #fff;
 }
@@ -34,12 +32,14 @@ table caption {
   margin: 1ex;
 }
 
-form, .select_label {
-    font-size: 60%;
-    font-weight: 50%;
+form,
+.select_label {
+  font-size: 60%;
+  font-weight: 50%;
 }
 
-#header.inverted, #footer.inverted {
+#header.inverted,
+#footer.inverted {
   color: #fff;
   text-shadow: 0 1px 4px #000;
 }
@@ -58,7 +58,8 @@ line {
   stroke-width: 1.5px;
 }
 
-.string, .regexp {
+.string,
+.regexp {
   color: #f39;
 }
 
@@ -75,11 +76,13 @@ line {
   color: #369;
 }
 
-.class, .special {
+.class,
+.special {
   color: #1181B8;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
   color: #000;
   text-decoration: none;
 }
@@ -161,15 +164,30 @@ rect.parent,
   fill: #bbb;
 }
 
-div.tooltip {
+#details {
   position: absolute;
   top: 1em;
   left: 1em;
   text-align: left;
   padding: 1em;
+  padding-top: 0.5em;
   font: 12px sans-serif;
   background: #ddd;
   border: solid 1px #aaa;
-  border-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top: none;
   pointer-events: none;
+}
+
+table caption {
+  font-size: 12px;
+  font-weight: 300;
+  text-shadow: 0 1px 0 #fff;
+  background: #ddd;
+  border: solid 1px #aaa;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom: none;
+  padding-top: 0.75em;
 }
