--- a/server/static/tree/style.css
+++ b/server/static/tree/style.css
@@ -7,20 +7,15 @@ body {
 }
 
 #chart,
-#header,
-#filters,
-#footer {
+#filters {
   position: absolute;
   top: 0;
 }
 
-#header,
-#footer {
-  z-index: 1;
-  display: block;
-  font-size: 36px;
-  font-weight: 300;
-  text-shadow: 0 1px 0 #fff;
+#chart {
+  width: 960px;
+  height: 500px;
+  background: #ddd;
 }
 
 #filters {
@@ -30,18 +25,31 @@ body {
   font-weight: 300;
   text-shadow: 0 1px 0 #fff;
   margin: 1ex;
+  margin-top: 0;
+  padding-top: 0;
+  min-width: 10em;
+  height: 500px;
+  left: 960px;
+}
+
+#header {
+  margin-top: 2px;
+  margin-bottom: 0.25em;
+  padding-top: 0;
+  font-size: 36px;
+  font-weight: 300;
+  text-shadow: 0 1px 0 #fff;
+}
+
+#header.inverted {
+  color: #fff;
+  text-shadow: 0 1px 4px #000;
 }
 
 form,
 .select_label {
   font-size: 60%;
   font-weight: 50%;
-}
-
-#header.inverted,
-#footer.inverted {
-  color: #fff;
-  text-shadow: 0 1px 4px #000;
 }
 
 rect {
@@ -91,38 +99,6 @@ a:hover {
   color: #666;
 }
 
-.hint {
-  position: absolute;
-  right: 0;
-  width: 1280px;
-  font-size: 12px;
-  color: #999;
-}
-
-#header {
-  top: 80px;
-  left: 140px;
-  width: 1000px;
-}
-
-#chart {
-  width: 960px;
-  height: 500px;
-  background: #ddd;
-}
-
-#filters {
-  min-width: 10em;
-  height: 500px;
-  left: 960px;
-}
-
-#footer {
-  width: 960px;
-  top: 500px;
-  left: 0px;
-  text-align: right;
-}
 
 text {
   pointer-events: none;
@@ -165,29 +141,95 @@ rect.parent,
 }
 
 #details {
-  position: absolute;
-  top: 1em;
-  left: 1em;
   text-align: left;
-  padding: 1em;
-  padding-top: 0.5em;
+  white-space: nowrap;
+  float: left;
+  margin-top: 510px;
+  margin-left: 10px;
+  padding: 0.5em;
+  padding-top: 1em;
   font: 12px sans-serif;
   background: #ddd;
   border: solid 1px #aaa;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-top: none;
-  pointer-events: none;
+  border-radius: 8px;
 }
 
-table caption {
+#details_path {
   font-size: 12px;
   font-weight: 300;
   text-shadow: 0 1px 0 #fff;
-  background: #ddd;
-  border: solid 1px #aaa;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  border-bottom: none;
-  padding-top: 0.75em;
+  padding: 1em;
+}
+
+#details table {
+  padding: 0.5em;
+  margin: 0;
+}
+
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 13px;
+  padding-bottom: 5px;
+}
+
+.lds-ellipsis div {
+  position: absolute;
+  top: 0px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: black;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(24px, 0);
+  }
 }
