Stop fast clicks highlighting text.

--- a/server/static/tree/style.css
+++ b/server/static/tree/style.css
@@ -113,6 +113,10 @@ rect.parent,
   fill: #ddd;
 }
 
+text {
+  user-select: none;
+}
+
 .lds-ellipsis {
   display: inline-block;
   position: relative;
