--- a/server/static/tree/css/style.css
+++ b/server/static/tree/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Helvetica Neue", Helvetica;
 }
 
-.row{
+.row {
   margin-bottom: 1em;
   display: flex;
 }
@@ -16,14 +16,30 @@ body {
   background: #ddd;
 }
 
-#filters {
+#sidebar {
   z-index: 1;
-  font-size: 24px;
   font-weight: 300;
   text-shadow: 0 1px 0 #fff;
   padding: 1ex;
   display: flex;
   flex-direction: column;
+}
+
+#title {
+  font-size: 28px;
+}
+
+.sidebar_section {
+  margin-bottom: 10px;
+}
+
+.filter {
+  margin-bottom: 10px;
+}
+
+#error {
+  font-size: 16px;
+  color: red;
 }
 
 #login_info {
@@ -70,7 +86,7 @@ body {
 
 form,
 .select_label {
-  font-size: 60%;
+  font-size: 15px;
   font-weight: 50%;
 }
 
@@ -123,6 +139,10 @@ text,
 #details:hover {
   user-select: text;
 }
+
+/*!
+ * lds-ellipsis
+ */
 
 .lds-ellipsis {
   display: inline-block;
@@ -190,4 +210,50 @@ text,
   100% {
     transform: translate(24px, 0);
   }
+}
+
+/*!
+ * form-control taken from:
+ * Bootstrap v3.3.5 (http://getbootstrap.com)
+ * Copyright 2011-2015 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 45px;
+  padding: 10px 15px;
+  font-size: 15px;
+  line-height: 1.42857143;
+  color: #2c3e50;
+  background-color: #ffffff;
+  background-image: none;
+  border: 1px solid #dce4ec;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
+}
+
+.form-control:focus {
+  border-color: #2c3e50;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(44, 62, 80, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(44, 62, 80, 0.6)
+}
+
+.form-control,
+input {
+  border-width: 2px;
+  -webkit-box-shadow: none;
+  box-shadow: none
+}
+
+.form-control:focus,
+input:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none
 }
