Temp hide Okta login, tweak login css, try to fix broken logins.

--- a/server/static/tree/css/style.css
+++ b/server/static/tree/css/style.css
@@ -12,12 +12,11 @@ body {
 }
 
 #login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vh;
-  height: 100vh;
-  flex-direction: column;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 #login-button {
