--- a/server/static/tree/css/style.css
+++ b/server/static/tree/css/style.css
@@ -12,16 +12,17 @@ body {
 }
 
 #login {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  padding: 1em;
 }
 
 #login-button {
   background-color: #007DC1;
   color: white;
+  cursor: pointer;
+}
+
+#login-button:hover {
+  cursor: pointer;
 }
 
 #chart {
