--- a/server/static/tree/css/style.css
+++ b/server/static/tree/css/style.css
@@ -86,6 +86,14 @@ button:hover {
   margin-bottom: 10px;
 }
 
+#age_filter {
+  margin: 0;
+  padding: 0;
+  padding-left: 8px;
+  width: 102%;
+  height: 35px;
+}
+
 #header {
   margin-top: 2px;
   margin-bottom: 0.25em;
