--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -2,6 +2,15 @@
   float: right;
 }
 
+#usageFilter td:first-child {
+  text-align: right;
+}
+
+#usageFilter td:first-child label:after {
+  content: ":";
+  margin-right: 0.25em;
+}
+
 .usageTable.user tr > :nth-child(1),
 .usageTable.user tr > :nth-child(5),
 .usageTable.user tr > :nth-child(6),
