--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -290,7 +290,8 @@ summary {
   display: grid;
   width: 100%;
   gap: 0.5em 1em;
-  grid-template-columns: min-content min-content min-content min-content auto;
+  grid-template-columns: min-content min-content min-content auto min-content;
+  justify-items: start;
 }
 
 .treeFilter label {
@@ -303,7 +304,12 @@ summary {
 }
 
 .treeFilter > .multiInput {
-  grid-column: 2 / span 4;
+  grid-column: 2 / span 3;
+}
+
+#scatter {
+  grid-column: 5;
+  grid-row: 1 / 7;
 }
 
 .treeFilter > select {
