Clicking on a circle point calls a callback with the time and size.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -312,6 +312,10 @@ summary {
   grid-row: 1 / 7;
 }
 
+#scatter use {
+  cursor: crosshair;
+}
+
 .treeFilter > select {
   grid-column: 2 / span 2;
 }
