Hide PI column in user usage table (as there's not data for it).

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -2,6 +2,7 @@
   float: right;
 }
 
+#usageTable.user tr > :nth-child(1),
 #usageTable.user tr > :nth-child(6),
 #usageTable.user tr > :nth-child(7),
 #usageTable.user tr > :nth-child(8),
