--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -267,6 +267,7 @@ rect + text {
 .multiInput > div {
   height: 0px;
   position: relative;
+  z-index: 10;
 }
 
 .multiInput > div:not(:focus-within) {
