Change lock symbol to pass mouse events to rect.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -15,7 +15,7 @@ rect.hasClick {
   cursor: pointer;
 }
 
-rect + text, rect + use + text {
+rect + text, rect + use, rect + use + text {
   pointer-events: none;
   font-family: Times;
 }
