--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -1,13 +1,55 @@
+html {
+  margin: 0;
+}
+
+body {
+  padding: 0 0.25em;
+}
+
 #auth {
   float: right;
 }
 
-#usageTable.user tr > :nth-child(1),
+#usageTable {
+  table-layout: fixed;
+  width: calc(100vw - 2em);
+}
+
+#usageTable tbody {
+  white-space: nowrap;
+}
+
+#usageTable td {
+  overflow: hidden;
+}
+
+#usageTable .selected td:first-child {
+  white-space: normal;
+}
+
+#usageTable td:first-child {
+  text-overflow: ellipsis;
+}
+
+#usageTable col:nth-child(2), #usageTable col:nth-child(3),
+#usageTable col:nth-child(7), #usageTable col:nth-child(8),
+#usageTable col:nth-child(9) {
+  width: 5em;
+}
+
+#usageTable col:nth-child(4), #usageTable col:nth-child(5) {
+  width: 7em;
+}
+
+#usageTable col:nth-child(6) {
+  width: 8em;
+}
+
+#usageTable.user tr > :nth-child(3),
+#usageTable.user tr > :nth-child(4),
 #usageTable.user tr > :nth-child(6),
 #usageTable.user tr > :nth-child(7),
-#usageTable.user tr > :nth-child(8),
-#usageTable.user tr > :nth-child(10),
-#usageTable.user tr > :nth-child(12) {
+#usageTable.user tr > :nth-child(9) {
   display: none;
 }
 
@@ -87,15 +129,15 @@ rect + text, rect + use, rect + use + text {
   padding: 0.5em 0.25em;
 }
 
+#usageTable tbody td:nth-child(2), #usageTable tbody td:nth-child(3), #usageTable tbody td:nth-child(4),
 #usageTable tbody td:nth-child(5), #usageTable tbody td:nth-child(6), #usageTable tbody td:nth-child(7),
-#usageTable tbody td:nth-child(8), #usageTable tbody td:nth-child(9), #usageTable tbody td:nth-child(10),
-#usageTable tbody td:nth-child(11),
+#usageTable tbody td:nth-child(8),
 #historyTable tbody td:nth-child(2), #historyTable tbody td:nth-child(3), #historyTable tbody td:nth-child(4) {
   text-align: right;
   padding-right: 1em;
 }
 
-#usageTable tbody td:nth-child(12) {
+#usageTable tbody td:nth-child(9) {
   text-align: center;
   white-space: nowrap;
 }
@@ -389,6 +431,10 @@ summary {
   margin-right: 0.5em;
 }
 
+summary, label, text, th, .multiInput, .minmax {
+  user-select: none;
+}
+
 @media (prefers-color-scheme: light) {
   html, body {
     color: #000;
@@ -516,8 +562,4 @@ summary {
   .multiInput > div > div ul {
     border: 0 1px 1px 1px solid #fff;
   }
-}
-
-summary, label, text, th, .multiInput, .minmax {
-  user-select: none;
 }
