Moved alpha value from treemap colours to CSS + added hover effect to change the alpha.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -435,6 +435,14 @@ summary {
   margin-right: 0.5em;
 }
 
+.treeMap rect {
+  fill-opacity: 0.75;
+}
+
+.treeMap rect:hover {
+  fill-opacity: 0.8;
+}
+
 summary, label, text, th, .multiInput, .minmax {
   user-select: none;
 }
